// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stegvisning - Sivilstand > rendrer slik den skal når sivilstand ikke er oppgitt (UOPPGITT eller UKNOWN) 1`] = `
<DocumentFragment>
  <section
    class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
  >
    <form>
      <h2
        class="navds-heading navds-heading--medium navds-typo--spacing"
      >
        stegvisning.sivilstand.title
      </h2>
      <p
        class="_ingress_885e37 navds-body-long navds-body-long--large"
      >
        stegvisning.sivilstand.ingress_ukjent
      </p>
      <div
        class="navds-stack navds-vstack navds-stack-gap navds-stack-direction"
        style="--__ac-stack-gap-xs: var(--a-spacing-6); --__ac-stack-direction-xs: column;"
      >
        <div
          class="_selectSivilstand_885e37 navds-form-field navds-form-field--medium"
        >
          <label
            class="navds-form-field__label navds-label"
            for="select-r0"
          >
            stegvisning.sivilstand.select_label
          </label>
          <div
            class="navds-form-field__description navds-body-short navds-body-short--medium"
            id="select-description-r0"
          >
            stegvisning.sivilstand.select_description_ukjent
          </div>
          <div
            class="navds-select__container"
          >
            <select
              aria-describedby="select-description-r0"
              class="navds-select__input navds-body-short navds-body-short--medium"
              id="select-r0"
              name="sivilstand"
            >
              <option
                disabled=""
                value=""
              >
                 
              </option>
              <option
                value="ENKE_ELLER_ENKEMANN"
              >
                sivilstand.ENKE_ELLER_ENKEMANN
              </option>
              <option
                value="GIFT"
              >
                sivilstand.GIFT
              </option>
              <option
                value="GJENLEVENDE_PARTNER"
              >
                sivilstand.GJENLEVENDE_PARTNER
              </option>
              <option
                value="REGISTRERT_PARTNER"
              >
                sivilstand.REGISTRERT_PARTNER
              </option>
              <option
                value="SAMBOER"
              >
                sivilstand.SAMBOER
              </option>
              <option
                value="SEPARERT_PARTNER"
              >
                sivilstand.SEPARERT_PARTNER
              </option>
              <option
                value="SEPARERT"
              >
                sivilstand.SEPARERT
              </option>
              <option
                value="SKILT"
              >
                sivilstand.SKILT
              </option>
              <option
                value="SKILT_PARTNER"
              >
                sivilstand.SKILT_PARTNER
              </option>
              <option
                value="UGIFT"
              >
                sivilstand.UGIFT
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="navds-select__chevron"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <div
            aria-live="polite"
            aria-relevant="additions removals"
            class="navds-form-field__error"
            id="select-error-r0"
          />
        </div>
      </div>
      <button
        class="_button_885e37 navds-button navds-button--primary navds-button--medium"
        type="submit"
      >
        <span
          class="navds-label"
        >
          stegvisning.neste
        </span>
      </button>
      <button
        class="_button_885e37 navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.tilbake
        </span>
      </button>
      <button
        class="_button_885e37 navds-button navds-button--tertiary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.avbryt
        </span>
      </button>
    </form>
  </section>
</DocumentFragment>
`;

exports[`stegvisning - Sivilstand > rendrer slik den skal når sivilstand ikke er oppgitt 1`] = `
<DocumentFragment>
  <section
    class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
  >
    <form>
      <h2
        class="navds-heading navds-heading--medium navds-typo--spacing"
      >
        stegvisning.sivilstand.title
      </h2>
      <p
        class="_ingress_885e37 navds-body-long navds-body-long--large"
      >
        stegvisning.sivilstand.ingress_1sivilstand.ugiftstegvisning.sivilstand.ingress_2
      </p>
      <fieldset
        aria-required="true"
        class="_radiogroup_885e37 navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
        role="radiogroup"
      >
        <legend
          class="navds-fieldset__legend navds-label"
        >
          stegvisning.sivilstand.radio_label
        </legend>
        <div
          class="navds-radio-buttons"
        >
          <div
            class="navds-radio navds-radio--medium"
          >
            <input
              aria-labelledby="r3"
              class="navds-radio__input"
              id="radio-r2"
              name="sivilstand"
              type="radio"
              value="ja"
            />
            <label
              class="navds-radio__label"
              for="radio-r2"
            >
              <span
                class="navds-radio__content"
              >
                <span
                  aria-hidden="true"
                  class="navds-body-short navds-body-short--medium"
                  id="r3"
                >
                  stegvisning.sivilstand.radio_ja
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-radio navds-radio--medium"
          >
            <input
              aria-labelledby="r6"
              class="navds-radio__input"
              id="radio-r5"
              name="sivilstand"
              type="radio"
              value="nei"
            />
            <label
              class="navds-radio__label"
              for="radio-r5"
            >
              <span
                class="navds-radio__content"
              >
                <span
                  aria-hidden="true"
                  class="navds-body-short navds-body-short--medium"
                  id="r6"
                >
                  stegvisning.sivilstand.radio_nei
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          aria-live="polite"
          aria-relevant="additions removals"
          class="navds-fieldset__error"
          id="fieldset-error-r1"
        />
      </fieldset>
      <button
        class="_button_885e37 navds-button navds-button--primary navds-button--medium"
        type="submit"
      >
        <span
          class="navds-label"
        >
          stegvisning.neste
        </span>
      </button>
      <button
        class="_button_885e37 navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.tilbake
        </span>
      </button>
      <button
        class="_button_885e37 navds-button navds-button--tertiary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.avbryt
        </span>
      </button>
    </form>
  </section>
</DocumentFragment>
`;

exports[`stegvisning - Sivilstand > rendrer slik den skal når sivilstand ikke er oppgitt 2`] = `
<DocumentFragment>
  <section
    class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
  >
    <form>
      <h2
        class="navds-heading navds-heading--medium navds-typo--spacing"
      >
        stegvisning.sivilstand.title
      </h2>
      <p
        class="_ingress_885e37 navds-body-long navds-body-long--large"
      >
        stegvisning.sivilstand.ingress_1sivilstand.ugiftstegvisning.sivilstand.ingress_2
      </p>
      <div
        class="navds-form-field navds-form-field--medium"
      >
        <label
          class="navds-form-field__label navds-label"
          for="select-r0"
        >
          stegvisning.sivilstand.select_label
        </label>
        <div
          class="navds-form-field__description navds-body-short navds-body-short--medium"
          id="select-description-r0"
        >
          stegvisning.sivilstand.select_description
        </div>
        <div
          class="navds-select__container"
        >
          <select
            aria-describedby="select-description-r0"
            class="navds-select__input navds-body-short navds-body-short--medium"
            id="select-r0"
            name="sivilstand"
          >
            <option
              value="UGIFT"
            >
              sivilstand.UGIFT
            </option>
            <option
              value="GIFT"
            >
              sivilstand.GIFT
            </option>
            <option
              value="ENKE_ELLER_ENKEMANN"
            >
              sivilstand.ENKE_ELLER_ENKEMANN
            </option>
            <option
              value="SKILT"
            >
              sivilstand.SKILT
            </option>
            <option
              value="SEPARERT"
            >
              sivilstand.SEPARERT
            </option>
            <option
              value="REGISTRERT_PARTNER"
            >
              sivilstand.REGISTRERT_PARTNER
            </option>
            <option
              value="SEPARERT_PARTNER"
            >
              sivilstand.SEPARERT_PARTNER
            </option>
            <option
              value="SKILT_PARTNER"
            >
              sivilstand.SKILT_PARTNER
            </option>
            <option
              value="GJENLEVENDE_PARTNER"
            >
              sivilstand.GJENLEVENDE_PARTNER
            </option>
            <option
              value="SAMBOER"
            >
              sivilstand.SAMBOER
            </option>
          </select>
          <svg
            aria-hidden="true"
            class="navds-select__chevron"
            fill="none"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          aria-live="polite"
          aria-relevant="additions removals"
          class="navds-form-field__error"
          id="select-error-r0"
        />
      </div>
      <button
        class="_button_885e37 navds-button navds-button--primary navds-button--medium"
        type="submit"
      >
        <span
          class="navds-label"
        >
          stegvisning.neste
        </span>
      </button>
      <button
        class="_button_885e37 navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.tilbake
        </span>
      </button>
      <button
        class="_button_885e37 navds-button navds-button--tertiary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.avbryt
        </span>
      </button>
    </form>
  </section>
</DocumentFragment>
`;

exports[`stegvisning - Sivilstand > rendrer slik den skal når sivilstand ikke er oppgitt 3`] = `
<DocumentFragment>
  <section
    class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
  >
    <form>
      <h2
        class="navds-heading navds-heading--medium navds-typo--spacing"
      >
        stegvisning.sivilstand.title
      </h2>
      <p
        class="_ingress_885e37 navds-body-long navds-body-long--large"
      >
        stegvisning.sivilstand.ingress_1sivilstand.ugiftstegvisning.sivilstand.ingress_2
      </p>
      <div
        class="navds-stack navds-vstack navds-stack-gap navds-stack-direction"
        style="--__ac-stack-gap-xs: var(--a-spacing-6); --__ac-stack-direction-xs: column;"
      >
        <div
          class="_selectSivilstand_885e37 navds-form-field navds-form-field--medium"
        >
          <label
            class="navds-form-field__label navds-label"
            for="select-r0"
          >
            stegvisning.sivilstand.select_label
          </label>
          <div
            class="navds-form-field__description navds-body-short navds-body-short--medium"
            id="select-description-r0"
          >
            stegvisning.sivilstand.select_description
          </div>
          <div
            class="navds-select__container"
          >
            <select
              aria-describedby="select-description-r0"
              class="navds-select__input navds-body-short navds-body-short--medium"
              id="select-r0"
              name="sivilstand"
            >
              <option
                value="UGIFT"
              >
                sivilstand.UGIFT
              </option>
              <option
                value="GIFT"
              >
                sivilstand.GIFT
              </option>
              <option
                value="ENKE_ELLER_ENKEMANN"
              >
                sivilstand.ENKE_ELLER_ENKEMANN
              </option>
              <option
                value="SKILT"
              >
                sivilstand.SKILT
              </option>
              <option
                value="SEPARERT"
              >
                sivilstand.SEPARERT
              </option>
              <option
                value="REGISTRERT_PARTNER"
              >
                sivilstand.REGISTRERT_PARTNER
              </option>
              <option
                value="SEPARERT_PARTNER"
              >
                sivilstand.SEPARERT_PARTNER
              </option>
              <option
                value="SKILT_PARTNER"
              >
                sivilstand.SKILT_PARTNER
              </option>
              <option
                value="GJENLEVENDE_PARTNER"
              >
                sivilstand.GJENLEVENDE_PARTNER
              </option>
              <option
                value="SAMBOER"
              >
                sivilstand.SAMBOER
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="navds-select__chevron"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <div
            aria-live="polite"
            aria-relevant="additions removals"
            class="navds-form-field__error"
            id="select-error-r0"
          />
        </div>
      </div>
      <button
        class="_button_885e37 navds-button navds-button--primary navds-button--medium"
        type="submit"
      >
        <span
          class="navds-label"
        >
          stegvisning.neste
        </span>
      </button>
      <button
        class="_button_885e37 navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.tilbake
        </span>
      </button>
      <button
        class="_button_885e37 navds-button navds-button--tertiary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.avbryt
        </span>
      </button>
    </form>
  </section>
</DocumentFragment>
`;

exports[`stegvisning - Sivilstand > rendrer slik den skal når sivilstand ikke er oppgitt 4`] = `
<DocumentFragment>
  <section
    class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
  >
    <form>
      <h2
        class="navds-heading navds-heading--medium navds-typo--spacing"
      >
        stegvisning.sivilstand.title
      </h2>
      <p
        class="_ingress_885e37 navds-body-long navds-body-long--large"
      >
        stegvisning.sivilstand.ingress_1_ugiftsivilstand.ugiftstegvisning.sivilstand.ingress_2
      </p>
      <div
        class="navds-stack navds-vstack navds-stack-gap navds-stack-direction"
        style="--__ac-stack-gap-xs: var(--a-spacing-6); --__ac-stack-direction-xs: column;"
      >
        <div
          class="_selectSivilstand_885e37 navds-form-field navds-form-field--medium"
        >
          <label
            class="navds-form-field__label navds-label"
            for="select-r0"
          >
            stegvisning.sivilstand.select_label
          </label>
          <div
            class="navds-form-field__description navds-body-short navds-body-short--medium"
            id="select-description-r0"
          >
            stegvisning.sivilstand.select_description
          </div>
          <div
            class="navds-select__container"
          >
            <select
              aria-describedby="select-description-r0"
              class="navds-select__input navds-body-short navds-body-short--medium"
              id="select-r0"
              name="sivilstand"
            >
              <option
                value="ENKE_ELLER_ENKEMANN"
              >
                sivilstand.ENKE_ELLER_ENKEMANN
              </option>
              <option
                value="GIFT"
              >
                sivilstand.GIFT
              </option>
              <option
                value="GJENLEVENDE_PARTNER"
              >
                sivilstand.GJENLEVENDE_PARTNER
              </option>
              <option
                value="REGISTRERT_PARTNER"
              >
                sivilstand.REGISTRERT_PARTNER
              </option>
              <option
                value="SEPARERT_PARTNER"
              >
                sivilstand.SEPARERT_PARTNER
              </option>
              <option
                value="SEPARERT"
              >
                sivilstand.SEPARERT
              </option>
              <option
                value="SAMBOER"
              >
                sivilstand.SAMBOER
              </option>
              <option
                value="SKILT"
              >
                sivilstand.SKILT
              </option>
              <option
                value="SKILT_PARTNER"
              >
                sivilstand.SKILT_PARTNER
              </option>
              <option
                value="UGIFT"
              >
                sivilstand.UGIFT
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="navds-select__chevron"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <div
            aria-live="polite"
            aria-relevant="additions removals"
            class="navds-form-field__error"
            id="select-error-r0"
          />
        </div>
      </div>
      <button
        class="_button_885e37 navds-button navds-button--primary navds-button--medium"
        type="submit"
      >
        <span
          class="navds-label"
        >
          stegvisning.neste
        </span>
      </button>
      <button
        class="_button_885e37 navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.tilbake
        </span>
      </button>
      <button
        class="_button_885e37 navds-button navds-button--tertiary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.avbryt
        </span>
      </button>
    </form>
  </section>
</DocumentFragment>
`;

exports[`stegvisning - Sivilstand > rendrer slik den skal når sivilstand ikke er oppgitt 5`] = `
<DocumentFragment>
  <section
    class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
  >
    <form>
      <h2
        class="navds-heading navds-heading--medium navds-typo--spacing"
      >
        stegvisning.sivilstand.title
      </h2>
      <p
        class="_ingress_885e37 navds-body-long navds-body-long--large"
      >
        stegvisning.sivilstand.ingress_1sivilstand.ugiftstegvisning.sivilstand.ingress_2
      </p>
      <div
        class="navds-stack navds-vstack navds-stack-gap navds-stack-direction"
        style="--__ac-stack-gap-xs: var(--a-spacing-6); --__ac-stack-direction-xs: column;"
      >
        <div
          class="_selectSivilstand_885e37 navds-form-field navds-form-field--medium"
        >
          <label
            class="navds-form-field__label navds-label"
            for="select-r0"
          >
            stegvisning.sivilstand.select_label
          </label>
          <div
            class="navds-form-field__description navds-body-short navds-body-short--medium"
            id="select-description-r0"
          >
            stegvisning.sivilstand.select_description
          </div>
          <div
            class="navds-select__container"
          >
            <select
              aria-describedby="select-description-r0"
              class="navds-select__input navds-body-short navds-body-short--medium"
              id="select-r0"
              name="sivilstand"
            >
              <option
                value="ENKE_ELLER_ENKEMANN"
              >
                sivilstand.ENKE_ELLER_ENKEMANN
              </option>
              <option
                value="GIFT"
              >
                sivilstand.GIFT
              </option>
              <option
                value="GJENLEVENDE_PARTNER"
              >
                sivilstand.GJENLEVENDE_PARTNER
              </option>
              <option
                value="REGISTRERT_PARTNER"
              >
                sivilstand.REGISTRERT_PARTNER
              </option>
              <option
                value="SEPARERT_PARTNER"
              >
                sivilstand.SEPARERT_PARTNER
              </option>
              <option
                value="SEPARERT"
              >
                sivilstand.SEPARERT
              </option>
              <option
                value="SAMBOER"
              >
                sivilstand.SAMBOER
              </option>
              <option
                value="SKILT"
              >
                sivilstand.SKILT
              </option>
              <option
                value="SKILT_PARTNER"
              >
                sivilstand.SKILT_PARTNER
              </option>
              <option
                value="UGIFT"
              >
                sivilstand.UGIFT
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="navds-select__chevron"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <div
            aria-live="polite"
            aria-relevant="additions removals"
            class="navds-form-field__error"
            id="select-error-r0"
          />
        </div>
      </div>
      <button
        class="_button_885e37 navds-button navds-button--primary navds-button--medium"
        type="submit"
      >
        <span
          class="navds-label"
        >
          stegvisning.neste
        </span>
      </button>
      <button
        class="_button_885e37 navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.tilbake
        </span>
      </button>
      <button
        class="_button_885e37 navds-button navds-button--tertiary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.avbryt
        </span>
      </button>
    </form>
  </section>
</DocumentFragment>
`;

exports[`stegvisning - Sivilstand > rendrer slik den skal når sivilstand ikke er oppgitt 6`] = `
<DocumentFragment>
  <section
    class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
  >
    <form>
      <h2
        class="navds-heading navds-heading--medium navds-typo--spacing"
      >
        stegvisning.sivilstand.title
      </h2>
      <p
        class="_ingress_885e37 navds-body-long navds-body-long--large"
      >
        stegvisning.sivilstand.ingress_1sivilstand.ugiftstegvisning.sivilstand.ingress_2
      </p>
      <div
        class="navds-stack navds-vstack navds-stack-gap navds-stack-direction"
        style="--__ac-stack-gap-xs: var(--a-spacing-6); --__ac-stack-direction-xs: column;"
      >
        <div
          class="_selectSivilstand_885e37 navds-form-field navds-form-field--medium"
        >
          <label
            class="navds-form-field__label navds-label"
            for="select-r0"
          >
            stegvisning.sivilstand.select_label
          </label>
          <div
            class="navds-form-field__description navds-body-short navds-body-short--medium"
            id="select-description-r0"
          >
            stegvisning.sivilstand.select_description
          </div>
          <div
            class="navds-select__container"
          >
            <select
              aria-describedby="select-description-r0"
              class="navds-select__input navds-body-short navds-body-short--medium"
              id="select-r0"
              name="sivilstand"
            >
              <option
                value="ENKE_ELLER_ENKEMANN"
              >
                sivilstand.ENKE_ELLER_ENKEMANN
              </option>
              <option
                value="GIFT"
              >
                sivilstand.GIFT
              </option>
              <option
                value="GJENLEVENDE_PARTNER"
              >
                sivilstand.GJENLEVENDE_PARTNER
              </option>
              <option
                value="REGISTRERT_PARTNER"
              >
                sivilstand.REGISTRERT_PARTNER
              </option>
              <option
                value="SAMBOER"
              >
                sivilstand.SAMBOER
              </option>
              <option
                value="SEPARERT_PARTNER"
              >
                sivilstand.SEPARERT_PARTNER
              </option>
              <option
                value="SEPARERT"
              >
                sivilstand.SEPARERT
              </option>
              <option
                value="SKILT"
              >
                sivilstand.SKILT
              </option>
              <option
                value="SKILT_PARTNER"
              >
                sivilstand.SKILT_PARTNER
              </option>
              <option
                value="UGIFT"
              >
                sivilstand.UGIFT
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="navds-select__chevron"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <div
            aria-live="polite"
            aria-relevant="additions removals"
            class="navds-form-field__error"
            id="select-error-r0"
          />
        </div>
      </div>
      <button
        class="_button_885e37 navds-button navds-button--primary navds-button--medium"
        type="submit"
      >
        <span
          class="navds-label"
        >
          stegvisning.neste
        </span>
      </button>
      <button
        class="_button_885e37 navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.tilbake
        </span>
      </button>
      <button
        class="_button_885e37 navds-button navds-button--tertiary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.avbryt
        </span>
      </button>
    </form>
  </section>
</DocumentFragment>
`;

exports[`stegvisning - Sivilstand > rendrer slik den skal når sivilstand ikke er oppgitt 7`] = `
<DocumentFragment>
  <section
    class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
  >
    <form>
      <h2
        class="navds-heading navds-heading--medium navds-typo--spacing"
      >
        stegvisning.sivilstand.title
      </h2>
      <p
        class="_ingress_885e37 navds-body-long navds-body-long--large"
      >
        stegvisning.sivilstand.ingress_ukjent
      </p>
      <div
        class="navds-stack navds-vstack navds-stack-gap navds-stack-direction"
        style="--__ac-stack-gap-xs: var(--a-spacing-6); --__ac-stack-direction-xs: column;"
      >
        <div
          class="_selectSivilstand_885e37 navds-form-field navds-form-field--medium"
        >
          <label
            class="navds-form-field__label navds-label"
            for="select-r0"
          >
            stegvisning.sivilstand.select_label
          </label>
          <div
            class="navds-form-field__description navds-body-short navds-body-short--medium"
            id="select-description-r0"
          >
            stegvisning.sivilstand.select_description_ukjent
          </div>
          <div
            class="navds-select__container"
          >
            <select
              aria-describedby="select-description-r0"
              class="navds-select__input navds-body-short navds-body-short--medium"
              id="select-r0"
              name="sivilstand"
            >
              <option
                disabled=""
                value=""
              >
                 
              </option>
              <option
                value="ENKE_ELLER_ENKEMANN"
              >
                sivilstand.ENKE_ELLER_ENKEMANN
              </option>
              <option
                value="GIFT"
              >
                sivilstand.GIFT
              </option>
              <option
                value="GJENLEVENDE_PARTNER"
              >
                sivilstand.GJENLEVENDE_PARTNER
              </option>
              <option
                value="REGISTRERT_PARTNER"
              >
                sivilstand.REGISTRERT_PARTNER
              </option>
              <option
                value="SAMBOER"
              >
                sivilstand.SAMBOER
              </option>
              <option
                value="SEPARERT_PARTNER"
              >
                sivilstand.SEPARERT_PARTNER
              </option>
              <option
                value="SEPARERT"
              >
                sivilstand.SEPARERT
              </option>
              <option
                value="SKILT"
              >
                sivilstand.SKILT
              </option>
              <option
                value="SKILT_PARTNER"
              >
                sivilstand.SKILT_PARTNER
              </option>
              <option
                value="UGIFT"
              >
                sivilstand.UGIFT
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="navds-select__chevron"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <div
            aria-live="polite"
            aria-relevant="additions removals"
            class="navds-form-field__error"
            id="select-error-r0"
          />
        </div>
      </div>
      <button
        class="_button_885e37 navds-button navds-button--primary navds-button--medium"
        type="submit"
      >
        <span
          class="navds-label"
        >
          stegvisning.neste
        </span>
      </button>
      <button
        class="_button_885e37 navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.tilbake
        </span>
      </button>
      <button
        class="_button_885e37 navds-button navds-button--tertiary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.avbryt
        </span>
      </button>
    </form>
  </section>
</DocumentFragment>
`;
